# xmlserde

./: Cargo.toml  README.md
derives/: Cargo.toml
derives/src/: container.rs  de.rs  enum_value.rs  lib.rs  ser.rs  symbol.rs  utils.rs
src/: lib.rs
tests/: lib.rs
