[package]
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
name = "xmlserde"
version = "0.10.2"
license = "MIT"
description = "useful tool for serializing and deserializing xml"
repository = "https://github.com/ImJeremyHe/xmlserde"
keywords = ["xml", "serde"]
readme = "README.md"

[dependencies]
quick-xml = {version = "0.37", features = ["serialize"]}

[dev-dependencies]
xmlserde_derives = {path = "./derives", version = "0.10.2"}
