[package]
name = "xmlserde_derives"
version = "0.7.0"
description = "macros that help xmlserde serde the xml files"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/ImJeremyHe/xmlserde"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.48", features = ["full"]}
quote = "1.0.35"
proc-macro2 = "1.0.75"
